--- a/src/app.html
+++ b/src/app.html
@@ -1,13 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
 	<head>
+		<title>Midrènes und Josuas Hochzeit</title>
 		<meta charset="utf-8" />
 		<link rel="icon" href="/images/favicon.png" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
-		%svelte.head%
+		<meta name="description" content="A site for guests of the wedding of Midrène and Josua." />
+		%sveltekit.head%
 	</head>
 
 	<body>
-		<div id="svelte">%svelte.body%</div>
+		<div id="svelte">%sveltekit.body%</div>
 	</body>
 </html>
