changed link to code

--- a/src/app.html
+++ b/src/app.html
@@ -1,15 +1,18 @@
 <!DOCTYPE html>
 <html lang="en">
-	<head>
-		<title>Midrènes und Josuas Hochzeit</title>
-		<meta charset="utf-8" />
-		<link rel="icon" href="/images/favicon.png" />
-		<meta name="viewport" content="width=device-width, initial-scale=1" />
-		<meta name="description" content="A site for guests of the wedding of Midrène and Josua." />
-		%sveltekit.head%
-	</head>
 
-	<body>
-		<div id="svelte">%sveltekit.body%</div>
-	</body>
+<head>
+	<title>Midrènes und Josuas Hochzeit</title>
+	<meta charset="utf-8" />
+	<link rel="icon" href="/images/favicon.png" />
+	<meta name="viewport" content="width=device-width, initial-scale=1" />
+	<meta name="description"
+		content="Herzlich willkommen zur Hochzeit von Midrène und Josua. Hier findest du alle Informationen rund um unseren besonderen Tag." />
+	%sveltekit.head%
+</head>
+
+<body>
+	<div id="svelte">%sveltekit.body%</div>
+</body>
+
 </html>
