added env check

--- a/src/app.html
+++ b/src/app.html
@@ -1,17 +1,17 @@
 <!DOCTYPE html>
 <html lang="en">
+	<head>
+		<title>Midrènes und Josuas Hochzeit</title>
+		<meta charset="utf-8" />
+		<meta name="viewport" content="width=device-width, initial-scale=1" />
+		<meta
+			name="description"
+			content="Herzlich willkommen zur Hochzeit von Midrène und Josua. Hier findest du alle Informationen rund um unseren besonderen Tag."
+		/>
+		%sveltekit.head%
+	</head>
 
-<head>
-	<title>Midrènes und Josuas Hochzeit</title>
-	<meta charset="utf-8" />
-	<meta name="viewport" content="width=device-width, initial-scale=1" />
-	<meta name="description"
-		content="Herzlich willkommen zur Hochzeit von Midrène und Josua. Hier findest du alle Informationen rund um unseren besonderen Tag." />
-	%sveltekit.head%
-</head>
-
-<body>
-	<div id="svelte">%sveltekit.body%</div>
-</body>
-
+	<body>
+		<div id="svelte">%sveltekit.body%</div>
+	</body>
 </html>
