--- a/src/app.html
+++ b/src/app.html
@@ -1,26 +1,26 @@
 <!DOCTYPE html>
 <html lang="en">
+	<head>
+		<title>Midrènes und Josuas Hochzeit</title>
+		<meta charset="utf-8" />
+		<link rel="apple-touch-icon" sizes="180x180" href="%sveltekit.assets%/apple-touch-icon.png" />
+		<link rel="icon" type="image/png" sizes="32x32" href="%sveltekit.assets%/favicon-32x32.png" />
+		<link rel="icon" type="image/png" sizes="16x16" href="%sveltekit.assets%/favicon-16x16.png" />
+		<link rel="manifest" href="%sveltekit.assets%/site.webmanifest" />
+		<link rel="mask-icon" href="%sveltekit.assets%/safari-pinned-tab.svg" color="#5bbad5" />
+		<link rel="shortcut icon" href="%sveltekit.assets%/favicon.ico" />
+		<meta name="msapplication-TileColor" content="#ffffff" />
+		<meta name="msapplication-config" content="%sveltekit.assets%/browserconfig.xml" />
+		<meta name="theme-color" content="#ffffff" />
+		<meta name="viewport" content="width=device-width, initial-scale=1" />
+		<meta
+			name="description"
+			content="Herzlich willkommen zur Hochzeit von Midrène und Josua. Hier findest du alle Informationen rund um unseren besonderen Tag."
+		/>
+		%sveltekit.head%
+	</head>
 
-<head>
-	<title>Midrènes und Josuas Hochzeit</title>
-	<meta charset="utf-8" />
-	<link rel="apple-touch-icon" sizes="180x180" href="%sveltekit.assets%/apple-touch-icon.png">
-	<link rel="icon" type="image/png" sizes="32x32" href="%sveltekit.assets%/favicon-32x32.png">
-	<link rel="icon" type="image/png" sizes="16x16" href="%sveltekit.assets%/favicon-16x16.png">
-	<link rel="manifest" href="%sveltekit.assets%/site.webmanifest">
-	<link rel="mask-icon" href="%sveltekit.assets%/safari-pinned-tab.svg" color="#5bbad5">
-	<link rel="shortcut icon" href="%sveltekit.assets%/favicon.ico">
-	<meta name="msapplication-TileColor" content="#dc2626">
-	<meta name="msapplication-config" content="%sveltekit.assets%/browserconfig.xml">
-	<meta name="theme-color" content="#ffffff">
-	<meta name="viewport" content="width=device-width, initial-scale=1" />
-	<meta name="description"
-		content="Herzlich willkommen zur Hochzeit von Midrène und Josua. Hier findest du alle Informationen rund um unseren besonderen Tag." />
-	%sveltekit.head%
-</head>
-
-<body>
-	<div id="svelte">%sveltekit.body%</div>
-</body>
-
+	<body>
+		<div id="svelte">%sveltekit.body%</div>
+	</body>
 </html>
